load sass successfully

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,14 @@
     </head>
 
     <title>Market Place</title>
+    <div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="#/about">About</a></li>
+        </ul>
+        <h3 class="text-muted">Market Place</h3>
+        <hr>
+    </div>
     <body class="container" ng-app="khoiApp">
         <div class="hero-unit">
             <h1>Your Smart Store</h1>
@@ -38,7 +46,7 @@
             <div class="span12">
                 <div class="btn-group">
                     <button class="btn btn-primary" ng-click="add()">More products!</button>
-                    <button class="btn btn-default" ng-click="remove()">Clear 1</button>
+                    <!--<button class="btn btn-default" ng-click="remove()">Clear 1</button>!-->
                 </div>
 
                 <div masonry>
