add devise view

--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,20 @@
         <!-- load stylesheet !-->
         <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/united/bootstrap.min.css" rel="stylesheet">
         <link href="stylesheets/main.css" rel="stylesheet">
-        <style>
-          ul {
-          max-height: 400px;
-          overflow: auto;
-          list-style-type: none;
-          }>
-        </style>
+
     </head>
 
     <title>Market Place</title>
+    <div class="container">
+      <div class="header">
+          <ul class="nav nav-pills pull-right">
+            <li class="active"><a style="background: #e86537" href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+          </ul>
+          <h3 class="text-muted">Market Place</h3>
+          <hr>
+      </div>
+    </div>
     <body class="container" ng-app="khoiApp">
         <div class="hero-unit">
             <h1>Your Smart Store</h1>
