--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
           <ul class="nav nav-pills pull-right">
             <li class="active"><a style="background: #e86537" href="/">Home</a></li>
             <li><a href="/about">About</a></li>
+            <li>
+              <a class="login_button" href="/users/sign_up">Sign up</a>|
+              <a class="login_button" href="/users/sign_in">Log in</a>
+            </li>
           </ul>
           <h3 class="text-muted">Market Place</h3>
           <hr>
